[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimorl"
version = "0.1.0"
description = "A Python library for MIMO systems"
dependencies = [
    "numpy",
    "matplotlib",
]
optional-dependencies = [
    "torch",
    "gymnasium",
]
authors=[
    {name="Samuel Li", email="hcsamuel.li@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Wireless Communications",
]