[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimorl"
version = "0.1.0"
description = "A Python library for MIMO systems with RL integration"
dependencies = [
    "numpy",
    "matplotlib",
]
project.optional-dependencies = [
    "torch",
    "gymnasium",
    "pettingzoo",
]
authors=[
    {name="Samuel Li", email="hcsamuel.li@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]